add attendance feature

--- a/client/src/components/student-list/Student.css
+++ b/client/src/components/student-list/Student.css
@@ -1,7 +1,7 @@
 .stud-card {
     background-color: #ababe6 !important;
     border: 0;
-    font: 16px/150% Ebrima !important;
+    font: 16px/150% Ebrima !important
 }
 
 .stud-card:hover {
