--- a/client/src/components/attendance/attendance.css
+++ b/client/src/components/attendance/attendance.css
@@ -11,6 +11,10 @@
   user-select: none;
 }
 
+.list-names{
+  font-size: 18px;
+}
+
 /* Hide the browser's default checkbox */
 .checkbox-container input {
   position: absolute;
@@ -25,8 +29,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 25px;
-  width: 25px;
+  height: 15px;
+  width: 15px;
   background-color: #eee;
 }
 
@@ -54,10 +58,10 @@
 
 /* Style the checkmark/indicator */
 .checkbox-container .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 7px;
-  height: 12px;
+  left: 5px;
+  top: 3px;
+  width: 5px;
+  height: 10px;
   border: solid white;
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
@@ -65,8 +69,8 @@
   transform: rotate(45deg);
 }
 .date-picker {
-    color: rgb(39, 42, 248);
-    font-size: 30px;
+    color: rgb(63, 66, 235);
+    font-size: 20px;
 }
 .date-picker:hover {
     color: rgb(99, 101, 233);
@@ -74,7 +78,8 @@
 
 .selected-date {
     text-align: center;
-    color: rgb(233, 132, 0);
+    color: rgb(212, 128, 18);
+    font-size: 20px;
 }
 
 .calendar {
