--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-y: auto;
-  font-size: '18px'
+  font-size: '18px';
+  color: white;
+  background-size: cover;
 }
 
 code {
