--- a/client/src/components/fees/fees.css
+++ b/client/src/components/fees/fees.css
@@ -10,14 +10,14 @@
     height: 200px;
 }
 
-.spinner-container {
+/* .spinner-container {
     font-size: 50px;
-}
+} */
 
-.spinner {
+/* .spinner {
     position: absolute;
     top: 50%;
     left: 50%;
     margin-top: -25px;
     margin-left: -25px;
-}
+} */
