--- a/client/src/components/login/Login.css
+++ b/client/src/components/login/Login.css
@@ -5,7 +5,7 @@
 html,body{
     height: 100%;
     font-family: 'Numans', sans-serif, Courier, "Courier New", "Palatino Linotype","Franklin Gothic Medium";
-    background-color: rgb(214, 220, 238);
+    background-color: rgb(202, 215, 255);
 }
 
 .login-container{
@@ -18,7 +18,7 @@ html,body{
     margin-top: 100px;
     margin-bottom: auto;
     width: 400px;
-    background-color: rgba(113, 114, 196, 0.5) !important;
+    background-color: rgba(43, 46, 255, 0.5) !important;
 }
 
 .social_icon span{
@@ -69,7 +69,6 @@ input:focus{
 
 .login_btn{
     color: black;
-    /*background-color: #FFC312;*/
     width: 100px;
 }
 
@@ -78,5 +77,6 @@ input:focus{
 }
 
 .links a{
+    color: rgb(255, 219, 18);
     margin-left: 4px;
 }
