--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,10 +7,5 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-y: auto;
-  font-size: '16px';
-}
-
-code {
-  font-family: Consolas, source-code-pro, Menlo, Monaco,  "Courier New",
-    monospace;
+  font-size: 14px !important;
 }
