--- a/client/src/components/login/Login.css
+++ b/client/src/components/login/Login.css
@@ -3,10 +3,10 @@
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
 html,body{
-    height: 100%;
+    /* height: 100%; */
     font-family: 'Numans', sans-serif, Courier, "Courier New", "Palatino Linotype","Franklin Gothic Medium";
-    background-color: rgb(202, 215, 255);
-    font-size: 14px !important;
+    /* background-color: rgb(202, 215, 255); */
+    /* font-size: 14px !important; */
 }
 
 .login-container{
@@ -19,19 +19,19 @@ html,body{
     margin-top: 100px;
     margin-bottom: auto;
     width: 400px;
-    background-color: rgba(43, 46, 255, 0.5) !important;
+    /* background-color: rgba(43, 46, 255, 0.5) !important; */
 }
 
 .social_icon span{
     font-size: 60px;
     margin-left: 10px;
-    color: #292b2c !important;
+    color: rgba(255, 196, 18, 0.911) !important;
 }
 
 .social_icon span:hover{
     color: white;
     cursor: pointer;
-    color: #464646 !important;
+    color: rgba(255, 201, 41, 0.911) !important;
 }
 
 .card-header h3{
@@ -68,10 +68,10 @@ input:focus{
     margin-right: 5px;
 }
 
-.login_btn{
+/* .login_btn{
     color: black;
     width: 100px;
-}
+} */
 
 .links{
     color: white;
